Добавил блок категорий

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
     <header class="page-header">
         <a class="page-header__logo">
-            <img src="http://placehold.it/150x100" alt="Cat energy" class="page-header__logo-img--small">
-            <img src="http://placehold.it/150x100" alt="Cat energy" class="page-header__logo-title--small">
+            <img src="http://placehold.it/33x38" alt="Cat energy" width="33"  height="38" class="page-header__logo-img--small">
+            <img src="http://placehold.it/101x17" width="101"  height="18" alt="Cat energy" class="page-header__logo-title--small">
         </a>
         <nav class="main-nav">
             <button class="main-nav__toggle" type="button">Открыть меню</button>
@@ -29,7 +29,57 @@
         </nav>
     </header>
 
+    <main class="page-main">
+       <section class="cat-program">
+            <h1 class="cat-program__title">
+                Функциональное питание для котов
+            </h1>
+            <b class="cat-program__slogan">
+                Занялся собой? Займись котом!
+            </b>
+            <img src="http://placehold.it/280x271" alt="product-img" width="280" height="271" class="cat-program__product-img">
+            <a href="#" class="cat-program__button-link button">
+                Подобрать программу
+            </a>
+        </section>
+        <section class="categories">
+           <h2 class="visually-hidden">Каталог</h2>
+            <ul class="categories__list">
+                <li class="categories__item">
+                    <section class="categories__losing-weight losing-weight">
+                        <h2 class="losing-weight__title">
+                            Похудение
+                        </h2>
+                        <p class="losing-weight__text">
+                            Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+                        </p>
+                        <img src="http://placehold.it/240x194" alt="Похудение icon" class="losing-weight__img">
+                        <a href="#" class="losing-weight__button-slim categories__button button">
+                            <img src="http://placehold.it/24x11" alt="Переход на каталог slim" class="categories__button-img--small">
+                            Каталог Slim
+                        </a>
+                    </section>
+                </li>
+                <li class="categories__item">
+                    <section class="categories__mass-gain mass-gain">
+                        <h2 class="mass-gain__title">
+                            Похудение
+                        </h2>
+                        <p class="mass-gain__text">
+                            Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+                        </p>
+                         <img src="http://placehold.it/268x112" alt="Набор массы icon" class="losing-weight__img">
+                        <a href="#" class="mass-gain__button-slim categories__button button">
+                            <img src="http://placehold.it/24x11" alt="Переход на каталог pro" class="categories__button-img--small">
+                            Каталог Slim
+                        </a>
+                    </section>
+                </li>
+            </ul>
+        </section>
+        section
 
+    </main>
 
 </body>
 </html>
