--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <header class="page-header">
         <a class="page-header__logo">
             <img src="http://placehold.it/33x38" alt="Cat energy" width="33"  height="38" class="page-header__logo-img--small">
-            <img src="http://placehold.it/101x17" width="101"  height="18" alt="Cat energy" class="page-header__logo-title--small">
         </a>
+        <div class="text-logo">
+            <img src="http://placehold.it/101x17" width="101"  height="18" alt="Cat energy" class="page-logo__img">
+        </div>
         <nav class="main-nav">
             <button class="main-nav__toggle" type="button">Открыть меню</button>
             <div class="main-nav__wrapper">
@@ -77,9 +79,91 @@
                 </li>
             </ul>
         </section>
-        section
 
+        <section class="advantages">
+            <h2 class="advantages__title">Как это работает</h2>
+            <ul class="adavatages__list">
+                <li class="advantages__item">
+                    <img src="http://placehold.it/60x60" alt="Приемущество первое">
+                    <p>Функциональное питание содержит только полезные питательные вещества.</p>
+                </li>
+                <li class="advantages__item">
+                    <img src="http://placehold.it/60x60" alt="Приемущество второе">
+                    <p>Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+                </li>
+                <li class="advantages__item">
+                    <img src="http://placehold.it/60x60" alt="Приемущество третье">
+                    <p>Замените один-два приема обычной еды на наше функциональное питание.</p>
+                </li>
+                   <li class="advantages__item">
+                    <img src="http://placehold.it/60x60" alt="Приемущество четвертое">
+                    <p>Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+                </li>
+            </ul>
+        </section>
+        <section class="example">
+            <h2 class="example__title">
+                Живой пример
+            </h2>
+            <p class="example__description">
+                Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+            </p>
+            <div class="example__result result">
+                <fieldset class="result__weight weight">
+                    <strong class="weight__kg">5kg</strong>
+                    <legend class="weight-text">Снижение веса</legend>
+                </fieldset>
+                <fieldset class="result__time">
+                    <strong class="time__days">5kg</strong>
+                    <legend class="time-text">Снижение веса</legend>
+                </fieldset>
+                <h2 class="example__food-costs">
+                    Затраты на питание: 15 000 руб.
+                </h2>
+                <img src="http://placehold.it/320x240" alt="Кот до" class="example__cat-before-img">
+                <img src="http://placehold.it/320x240" alt="Кот до" class="example__cat-after-img">
+            </div>
+            <div class="example__before-after scale">
+                <span class="scale__before">Было</span>
+                <img src="http://placehold.it/84x14" alt="scale" class="scale__img">
+                <span class="scale__after">Стало</span>
+            </div>
+        </section>
+        <div class="contacts">
+            <address class="contacts__address address">
+                <b class="address__phrase">
+                    приглашаем к сотрудничеству дилеров!
+                </b>
+                <p class="address__place">
+                    ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
+                </p>
+            </address>
+            <section class="section-map map">
+                <h2 class="visually-hidden">Карта</h2>
+                <img src="http://placehold.it/1345x645" alt="Карта" class="map__img">
+            </section>
+        </div>
     </main>
+
+    <footer class="page-footer">
+         <div class="text-logo">
+            <img src="http://placehold.it/101x17" width="101"  height="18" alt="Cat energy" class="page-logo__img">
+        </div>
+        <section class="social">
+            <h2 class="visually-hidden">Социальные сети</h2>
+                <div class="social__wrapper">
+                    <img src="http://placehold.it/22x12" alt="Вконтакте" class="social__vk-img">
+                    <img  src="http://placehold.it/16x16"  alt="Инстаграм" class="social__instagram-img">
+                    <img  src="http://placehold.it/10x19"  alt="Фейсбук" class="social__facebook-img">
+                </div>
+        </section>
+        <p class="htmlacademy">
+            <label for="" class="htmlacademy__name">
+                HTML Academy
+            </label>
+            <img src="http://placehold.it/27x24" alt="Иконка академии" class="htmlacademy__icon">
+        </p>
+    </footer>
 
 </body>
 </html>
